--- a/Classes/class_3/master.css
+++ b/Classes/class_3/master.css
@@ -1,5 +1,6 @@
 body{
     background-color: lightsteelblue;
+    font-family: Lato, sans-serif;
 }
 
 a{
@@ -68,7 +69,46 @@ a{
     height:50px;
 }
 
+.comments-container{
+    width: 80%;
+    margin: auto;
+}
 
+.comments-list{
+    list-style: none;
+    padding: 0;
+}
+
+.comment{
+    border: solid 1px gray;
+    padding: 10px;
+    margin: 20px 0px;
+    border-radius: 5px;
+}
+
+.comment-title{
+    font-weight: bold;
+}
+
+.add-comment-form input, .add-comment-form textarea{
+    margin: 5px 0;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.add-comment-form input[type="text"], .add-comment-form textarea{
+    width: 100%;
+    border: solid 1px #bbbbbb ;
+    border-radius: 5px;
+}
+
+.add-comment-form textarea{
+    resize: none;
+}
+
+input:focus, textarea:focus{
+    outline: none;
+}
 
 
 
