--- a/Classes/class_3/master.css
+++ b/Classes/class_3/master.css
@@ -12,13 +12,17 @@ a{
     display: inline-block;
 }
 
+.mylist{
+    list-style: none;
+    list-style-type: none;
+}
 #welcome-text{
     position: relative;
     bottom: 100px;
 }
 .main-container{
     background-color: ghostwhite;
-    width: 60%;
+    width: 80%;
     margin: auto;
     padding: 50px;
     height: 3000px;
@@ -90,6 +94,7 @@ a{
     font-weight: bold;
 }
 
+/*
 .add-comment-form input, .add-comment-form textarea{
     margin: 5px 0;
     padding: 5px;
@@ -109,7 +114,13 @@ a{
 input:focus, textarea:focus{
     outline: none;
 }
+*/
 
+/* Starting form css from 0 with BOOTSTRAP*/
+
+.add-comment-form input, .add-comment-form textarea{
+    border-radius: 5px;
+}
 
 
 
